# voxtera

./: README.md  docker-compose.yml
backend/: Dockerfile  main.py  pyproject.toml
frontend/: Dockerfile  index.html  nginx.conf  package.json  vite.config.ts
frontend/src/: App.tsx  vite-env.d.ts
frontend/src/components/: OutputPane.tsx
frontend/src/lib/: api.ts
k8s/: backend.yml  frontend.yml  ingress.yml
