[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Camshaft54 <39676304+Camshaft54@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
onnxruntime = "1.17.1"
faster-whisper = "^1.1.0"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"
python-multipart = "^0.0.18"
torch = "^2.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
